--- a/playcounts.html
+++ b/playcounts.html
@@ -8,7 +8,7 @@
       body {font-family: Montserrat;}
       ul li {list-style-type: none;}
       div {display: inline-block; width: 225px;}
-      ul {background: repeating-linear-gradient(to bottom, #d7d7d7 0px, #d7d7d7 19px, #ffffff 19px, #ffffff 38px); display: inline-block;}
+      ul {background: repeating-linear-gradient(to bottom, #d7d7d7 0px, #d7d7d7 19px, #efefef 19px, #efefef 38px); display: inline-block;}
     </style>
   </head>
   <body>
