--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
       select {
         font-family: Overlock;
       }
-      option:disabled {
-        background: white;
-        color: white;
-      }
-      option {
-        transition-duration: 500ms;
-      }
       body {
         font-family: Montserrat;
         margin: 0;
@@ -78,10 +71,6 @@
         background-image: url("Album-Art/Music Albums/Unknown.jpg");
         background-size: 360px;
       }
-      button:disabled {
-        background: #000;
-        color: #000;
-      }
       #playCtsLink {
         position: absolute;
         bottom: 5px;
@@ -114,68 +103,68 @@
   <body>
     <select id="song" onchange="change()">
       <option>Choose a song to play!</option>
-      <option id="song1" disabled value="Barracuda">Barracuda (ID 00)</option>
-      <option id="song2" disabled value="Cascade">Cascade (ID 01)</option>
-      <option id="song3" disabled value="Cheat Codes">Cheat Codes (ID 02)</option>
-      <option id="song4" disabled value="Checkpoint">Checkpoint (ID 03)</option>
-      <option id="song5" disabled value="Chip Zeal">Chip Zeal (ID 04)</option>
-      <option id="song6" disabled value="Chronos">Chronos (ID 05)</option>
-      <option id="song7" disabled value="Commando Steve">Commando Steve (ID 06)</option>
-      <option id="song8" disabled value="Cool Friends">Cool Friends (ID 07)</option>
-      <option id="song9" disabled value="Core">Core (ID 08)</option>
-      <option id="song10" disabled value="Corrupted">Corrupted (ID 09)</option>
-      <option id="song11" disabled value="Courtesy">Courtesy (ID 10)</option>
-      <option id="song12" disabled value="Cruise Control">Cruise Control (ID 11)</option>
-      <option id="song13" disabled value="Dance of the Incognizant">Dance of the Incognizant (ID 12)</option>
-      <option id="song14" disabled value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole (ID 13)</option>
-      <option id="song15" disabled value="Destroid 8 - Annihilate">Destroid 8 - Annihilate (ID 14)</option>
-      <option id="song16" disabled value="Final Boss">Final Boss (ID 15)</option>
-      <option id="song17" disabled value="Focus">Focus (ID 16)</option>
-      <option id="song18" disabled value="FOX">FOX (ID 17)</option>
-      <option id="song19" disabled value="FTW">FTW (ID 18)</option>
-      <option id="song20" disabled value="Houston">Houston (ID 19)</option>
-      <option id="song21" disabled value="HYPE">HYPE (ID 20)</option>
-      <option id="song22" disabled value="Into The Zone">Into The Zone (ID 21)</option>
-      <option id="song23" disabled value="Legacy">Legacy (ID 22)</option>
-      <option id="song24" disabled value="Logic Gatekeeper">Logic Gatekeeper (ID 23)</option>
-      <option id="song25" disabled value="Long Live The New Fresh">Long Live The New Fresh (ID 24)</option>
-      <option id="song26" disabled value="Milky Ways">Milky Ways (ID 25)</option>
-      <option id="song27" disabled value="New Game">New Game (ID 26)</option>
-      <option id="song28" disabled value="On The Run">On The Run (ID 27)</option>
-      <option id="song29" disabled value="Once Again">Once Again (ID 28)</option>
-      <option id="song30" disabled value="Otis">Otis (ID 29)</option>
-      <option id="song31" disabled value="Paper Dolls">Paper Dolls (ID 30)</option>
-      <option id="song32" disabled value="Parallel Processing">Parallel Processing (ID 31)</option>
-      <option id="song33" disabled value="Peer Gynt">Peer Gynt (ID 32)</option>
-      <option id="song34" disabled value="Rainbow Road">Rainbow Road (ID 33)</option>
-      <option id="song35" disabled value="Sevcon">Sevcon (ID 34)</option>
-      <option id="song36" disabled value="Spectra">Spectra (ID 35)</option>
-      <option id="song37" disabled value="Sugar Rush">Sugar Rush (ID 36)</option>
-      <option id="song38" disabled value="Tension">Tension (ID 37)</option>
-      <option id="song39" disabled value="Termination Shock">Termination Shock (ID 38)</option>
-      <option id="song40" disabled value="The Art of War">The Art of War (ID 39)</option>
-      <option id="song41" disabled value="The Lunar Whale">The Lunar Whale (ID 40)</option>
-      <option id="song42" disabled value="Till It's Over">Till It's Over (ID 41)</option>
-      <option id="song43" disabled value="Tokyo Skies">Tokyo Skies (ID 42)</option>
-      <option id="song44" disabled value="Try This">Try This (ID 43)</option>
-      <option id="song45" disabled value="Unlocked">Unlocked (ID 44)</option>
-      <option id="song46" disabled value="Vindicate Me">Vindicate Me (ID 45)</option>
-      <option id="song47" disabled value="Wicked">Wicked (ID 46)</option>
+      <option id="song1" value="Barracuda">Barracuda (ID 00)</option>
+      <option id="song2" value="Cascade">Cascade (ID 01)</option>
+      <option id="song3" value="Cheat Codes">Cheat Codes (ID 02)</option>
+      <option id="song4" value="Checkpoint">Checkpoint (ID 03)</option>
+      <option id="song5" value="Chip Zeal">Chip Zeal (ID 04)</option>
+      <option id="song6" value="Chronos">Chronos (ID 05)</option>
+      <option id="song7" value="Commando Steve">Commando Steve (ID 06)</option>
+      <option id="song8" value="Cool Friends">Cool Friends (ID 07)</option>
+      <option id="song9" value="Core">Core (ID 08)</option>
+      <option id="song10" value="Corrupted">Corrupted (ID 09)</option>
+      <option id="song11" value="Courtesy">Courtesy (ID 10)</option>
+      <option id="song12" value="Cruise Control">Cruise Control (ID 11)</option>
+      <option id="song13" value="Dance of the Incognizant">Dance of the Incognizant (ID 12)</option>
+      <option id="song14" value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole (ID 13)</option>
+      <option id="song15" value="Destroid 8 - Annihilate">Destroid 8 - Annihilate (ID 14)</option>
+      <option id="song16" value="Final Boss">Final Boss (ID 15)</option>
+      <option id="song17" value="Focus">Focus (ID 16)</option>
+      <option id="song18" value="FOX">FOX (ID 17)</option>
+      <option id="song19" value="FTW">FTW (ID 18)</option>
+      <option id="song20" value="Houston">Houston (ID 19)</option>
+      <option id="song21" value="HYPE">HYPE (ID 20)</option>
+      <option id="song22" value="Into The Zone">Into The Zone (ID 21)</option>
+      <option id="song23" value="Legacy">Legacy (ID 22)</option>
+      <option id="song24" value="Logic Gatekeeper">Logic Gatekeeper (ID 23)</option>
+      <option id="song25" value="Long Live The New Fresh">Long Live The New Fresh (ID 24)</option>
+      <option id="song26" value="Milky Ways">Milky Ways (ID 25)</option>
+      <option id="song27" value="New Game">New Game (ID 26)</option>
+      <option id="song28" value="On The Run">On The Run (ID 27)</option>
+      <option id="song29" value="Once Again">Once Again (ID 28)</option>
+      <option id="song30" value="Otis">Otis (ID 29)</option>
+      <option id="song31" value="Paper Dolls">Paper Dolls (ID 30)</option>
+      <option id="song32" value="Parallel Processing">Parallel Processing (ID 31)</option>
+      <option id="song33" value="Peer Gynt">Peer Gynt (ID 32)</option>
+      <option id="song34" value="Rainbow Road">Rainbow Road (ID 33)</option>
+      <option id="song35" value="Sevcon">Sevcon (ID 34)</option>
+      <option id="song36" value="Spectra">Spectra (ID 35)</option>
+      <option id="song37" value="Sugar Rush">Sugar Rush (ID 36)</option>
+      <option id="song38" value="Tension">Tension (ID 37)</option>
+      <option id="song39" value="Termination Shock">Termination Shock (ID 38)</option>
+      <option id="song40" value="The Art of War">The Art of War (ID 39)</option>
+      <option id="song41" value="The Lunar Whale">The Lunar Whale (ID 40)</option>
+      <option id="song42" value="Till It's Over">Till It's Over (ID 41)</option>
+      <option id="song43" value="Tokyo Skies">Tokyo Skies (ID 42)</option>
+      <option id="song44" value="Try This">Try This (ID 43)</option>
+      <option id="song45" value="Unlocked">Unlocked (ID 44)</option>
+      <option id="song46" value="Vindicate Me">Vindicate Me (ID 45)</option>
+      <option id="song47" value="Wicked">Wicked (ID 46)</option>
     </select><br>
     <div>
       <span id="currentPos">0:00.000</span><span id="length">0:00.000</span><progress value="0" max="1" id="progress"></progress><br>
-      <button onclick="restart()" disabled id="restartBtn">
+      <button onclick="restart()" id="restartBtn">
         <svg width="40" height="40">
           <polyline style="stroke: none; fill: black;" points="35,5 10,20 35,35 35,5" />
           <polyline style="stroke: none; fill: black;" points="5,5 10,5 10,35 5,35 5,5" />
         </svg>
       </button>
-      <button onclick="skip(-15)" style="position: relative; top: -21px;" disabled id="rew15sBtn">Rewind<br>15 sec</button>
-      <button onclick="skip(-5)" style="position: relative; top: -21px;" disabled id="rew5sBtn">Rewind<br>5 sec</button>
-      <button onclick="toggle()" style="position: relative; top: -14px;" disabled id="playBtn">Play/Pause</button>
-      <button onclick="skip(5)" style="position: relative; top: -21px;" disabled id="skip5sBtn">Skip<br>5 sec</button>
-      <button onclick="skip(15)" style="position: relative; top: -21px;" disabled id="skip15sBtn">Skip<br>15 sec</button>
-      <button onclick="nextSong()" disabled id="skipBtn">
+      <button onclick="skip(-15)" style="position: relative; top: -21px;" id="rew15sBtn">Rewind<br>15 sec</button>
+      <button onclick="skip(-5)" style="position: relative; top: -21px;" id="rew5sBtn">Rewind<br>5 sec</button>
+      <button onclick="toggle()" style="position: relative; top: -14px;" id="playBtn">Play/Pause</button>
+      <button onclick="skip(5)" style="position: relative; top: -21px;" id="skip5sBtn">Skip<br>5 sec</button>
+      <button onclick="skip(15)" style="position: relative; top: -21px;" id="skip15sBtn">Skip<br>15 sec</button>
+      <button onclick="nextSong()" id="skipBtn">
         <svg width="40" height="40">
           <polyline style="stroke: none; fill: black;" points="5,5 30,20 5,35 5,5" />
           <polyline style="stroke: none; fill: black;" points="30,5 35,5 35,35 30,35 30,5" />
@@ -298,72 +287,6 @@
       document.getElementById("audio46"),
       document.getElementById("audio47")
     ];
-    songs[1].addEventListener("canplay", function() {document.getElementById("song").options[1].disabled = false;});
-    songs[2].addEventListener("canplay", function() {document.getElementById("song").options[2].disabled = false;});
-    songs[3].addEventListener("canplay", function() {document.getElementById("song").options[3].disabled = false;});
-    songs[4].addEventListener("canplay", function() {document.getElementById("song").options[4].disabled = false;});
-    songs[5].addEventListener("canplay", function() {document.getElementById("song").options[5].disabled = false;});
-    songs[6].addEventListener("canplay", function() {document.getElementById("song").options[6].disabled = false;});
-    songs[7].addEventListener("canplay", function() {document.getElementById("song").options[7].disabled = false;});
-    songs[8].addEventListener("canplay", function() {document.getElementById("song").options[8].disabled = false;});
-    songs[9].addEventListener("canplay", function() {document.getElementById("song").options[9].disabled = false;});
-    songs[10].addEventListener("canplay", function() {document.getElementById("song").options[10].disabled = false;});
-    songs[11].addEventListener("canplay", function() {document.getElementById("song").options[11].disabled = false;});
-    songs[12].addEventListener("canplay", function() {document.getElementById("song").options[12].disabled = false;});
-    songs[13].addEventListener("canplay", function() {document.getElementById("song").options[13].disabled = false;});
-    songs[14].addEventListener("canplay", function() {document.getElementById("song").options[14].disabled = false;});
-    songs[15].addEventListener("canplay", function() {document.getElementById("song").options[15].disabled = false;});
-    songs[16].addEventListener("canplay", function() {document.getElementById("song").options[16].disabled = false;});
-    songs[17].addEventListener("canplay", function() {document.getElementById("song").options[17].disabled = false;});
-    songs[18].addEventListener("canplay", function() {document.getElementById("song").options[18].disabled = false;});
-    songs[19].addEventListener("canplay", function() {document.getElementById("song").options[19].disabled = false;});
-    songs[20].addEventListener("canplay", function() {document.getElementById("song").options[20].disabled = false;});
-    songs[21].addEventListener("canplay", function() {document.getElementById("song").options[21].disabled = false;});
-    songs[22].addEventListener("canplay", function() {document.getElementById("song").options[22].disabled = false;});
-    songs[23].addEventListener("canplay", function() {document.getElementById("song").options[23].disabled = false;});
-    songs[24].addEventListener("canplay", function() {document.getElementById("song").options[24].disabled = false;});
-    songs[25].addEventListener("canplay", function() {document.getElementById("song").options[25].disabled = false;});
-    songs[26].addEventListener("canplay", function() {document.getElementById("song").options[26].disabled = false;});
-    songs[27].addEventListener("canplay", function() {document.getElementById("song").options[27].disabled = false;});
-    songs[28].addEventListener("canplay", function() {document.getElementById("song").options[28].disabled = false;});
-    songs[29].addEventListener("canplay", function() {document.getElementById("song").options[29].disabled = false;});
-    songs[30].addEventListener("canplay", function() {document.getElementById("song").options[30].disabled = false;});
-    songs[31].addEventListener("canplay", function() {document.getElementById("song").options[31].disabled = false;});
-    songs[32].addEventListener("canplay", function() {document.getElementById("song").options[32].disabled = false;});
-    songs[33].addEventListener("canplay", function() {document.getElementById("song").options[33].disabled = false;});
-    songs[34].addEventListener("canplay", function() {document.getElementById("song").options[34].disabled = false;});
-    songs[35].addEventListener("canplay", function() {document.getElementById("song").options[35].disabled = false;});
-    songs[36].addEventListener("canplay", function() {document.getElementById("song").options[36].disabled = false;});
-    songs[37].addEventListener("canplay", function() {document.getElementById("song").options[37].disabled = false;});
-    songs[38].addEventListener("canplay", function() {document.getElementById("song").options[38].disabled = false;});
-    songs[39].addEventListener("canplay", function() {document.getElementById("song").options[39].disabled = false;});
-    songs[40].addEventListener("canplay", function() {document.getElementById("song").options[40].disabled = false;});
-    songs[41].addEventListener("canplay", function() {document.getElementById("song").options[41].disabled = false;});
-    songs[42].addEventListener("canplay", function() {document.getElementById("song").options[42].disabled = false;});
-    songs[43].addEventListener("canplay", function() {document.getElementById("song").options[43].disabled = false;});
-    songs[44].addEventListener("canplay", function() {document.getElementById("song").options[44].disabled = false;});
-    songs[45].addEventListener("canplay", function() {document.getElementById("song").options[45].disabled = false;});
-    songs[46].addEventListener("canplay", function() {document.getElementById("song").options[46].disabled = false;});
-    songs[47].addEventListener("canplay", function() {document.getElementById("song").options[47].disabled = false;});
-    function isSongAvail(id) {
-      if (document.getElementById("song").options[id].disabled == false) {
-        return true;
-      } else return false;
-    }
-    var loading = setInterval(function() {
-      if (isSongAvail(1) == true && isSongAvail(2) == true && isSongAvail(3) == true && isSongAvail(4) == true && isSongAvail(5) == true && isSongAvail(6) == true && isSongAvail(7) == true && isSongAvail(8) == true && isSongAvail(9) == true && isSongAvail(10) == true && isSongAvail(11) == true && isSongAvail(12) == true && isSongAvail(13) == true && isSongAvail(14) == true && isSongAvail(15) == true && isSongAvail(16) == true && isSongAvail(17) == true && isSongAvail(18) == true && isSongAvail(19) == true && isSongAvail(20) == true && isSongAvail(21) == true && isSongAvail(22) == true && isSongAvail(23) == true && isSongAvail(24) == true && isSongAvail(25) == true && isSongAvail(26) == true && isSongAvail(27) == true && isSongAvail(28) == true && isSongAvail(29) == true && isSongAvail(30) == true && isSongAvail(31) == true && isSongAvail(32) == true && isSongAvail(33) == true && isSongAvail(34) == true && isSongAvail(35) == true && isSongAvail(36) == true && isSongAvail(37) == true && isSongAvail(38) == true && isSongAvail(39) == true && isSongAvail(40) == true && isSongAvail(41) == true && isSongAvail(42) == true && isSongAvail(43) == true && isSongAvail(44) == true && isSongAvail(45) == true && isSongAvail(46) == true && isSongAvail(47) == true) {
-        document.getElementById("restartBtn").removeAttribute("disabled");
-        document.getElementById("rew15sBtn").removeAttribute("disabled");
-        document.getElementById("rew5sBtn").removeAttribute("disabled");
-        document.getElementById("playBtn").removeAttribute("disabled");
-        document.getElementById("skip5sBtn").removeAttribute("disabled");
-        document.getElementById("skip15sBtn").removeAttribute("disabled");
-        document.getElementById("skipBtn").removeAttribute("disabled");
-        document.title = "Music Player";
-        setInterval(playProgress, 0);
-        clearInterval(loading);
-      }
-    }, 100);
     var length = 0, p = false, currentSong = 0, prevSong = 0, song, songValue;
     function change() {
       if (currentSong > 0) {prevSong = currentSong; songs[prevSong].pause(); songs[prevSong].currentTime = 0;}
