--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Loading...</title>
+    <title>Epic Music Player</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
     <link rel="icon" href="Album-Art/Music Albums/Unknown.jpg" id="album">
     <style>
