--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       select {
         font-family: Overlock;
       }
+      :focus {
+        outline-color: blue;
+      }
       body {
         font-family: Montserrat;
         margin: 0;
