--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Epic Music Player</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
-    <link rel="icon" href="Album-Art/Music Albums/Music.jpg" id="album">
+    <link rel="icon" href="Album-Art/Music Albums/Unknown.jpg" id="album">
     <style>
       select {
         font-family: Overlock;
@@ -80,17 +80,17 @@
         display: inline-block;
         width: 360px;
         height: 360px;
-        background-image: url("Album-Art/Music Albums/Music.jpg");
+        background-image: url("Album-Art/Music Albums/Unknown.jpg");
         background-size: 360px;
       }
-      .play {background-image: url("Album-Art/Music Albums/Play.jpg"); background-size: 50px;}
-      .pause {background-image: url("Album-Art/Music Albums/Pause.jpg"); background-size: 50px;}
-      #restartBtn {background-image: url("Album-Art/Music Albums/Restart.jpg"); background-size: 50px;}
-      #rew15sBtn {background-image: url("Album-Art/Music Albums/Rewind 15 seconds.jpg"); background-size: 50px;}
-      #rew5sBtn {background-image: url("Album-Art/Music Albums/Rewind 5 seconds.jpg"); background-size: 50px;}
-      #skipBtn {background-image: url("Album-Art/Music Albums/Skip song.jpg"); background-size: 50px;}
-      #skip15sBtn {background-image: url("Album-Art/Music Albums/Skip 15 seconds.jpg"); background-size: 50px;}
-      #skip5sBtn {background-image: url("Album-Art/Music Albums/Skip 5 seconds.jpg"); background-size: 50px;}
+      .play {background-image: url("Play.jpg"); background-size: 50px;}
+      .pause {background-image: url("Pause.jpg"); background-size: 50px;}
+      #restartBtn {background-image: url("Restart.jpg"); background-size: 50px;}
+      #rew15sBtn {background-image: url("Rewind 15 seconds.jpg"); background-size: 50px;}
+      #rew5sBtn {background-image: url("Rewind 5 seconds.jpg"); background-size: 50px;}
+      #skipBtn {background-image: url("Skip song.jpg"); background-size: 50px;}
+      #skip15sBtn {background-image: url("Skip 15 seconds.jpg"); background-size: 50px;}
+      #skip5sBtn {background-image: url("Skip 5 seconds.jpg"); background-size: 50px;}
       #playCountsDiv {position: absolute; bottom: 0; left: 0; outline: 1px solid black; height: 360px; width: 360px; overflow-y: auto; background: white;}
       #playCountsDiv::-webkit-scrollbar {width: 5px;}
       #playCountsDiv::-webkit-scrollbar-track {background: white;}
